# lib-plugin-manifest

./: Cargo.toml  README.md
src/: cargo_extract.rs  error.rs  lib.rs  package.rs  platform.rs  plugin.rs
