[package]
name = "lib-plugin-manifest"
version.workspace = true
edition.workspace = true
license = "MIT"
authors.workspace = true
description = "Plugin manifest parsing (plugin.toml and package.toml)"
repository = "https://github.com/adi-family/lib-plugin"
keywords = ["plugin", "manifest", "toml", "package"]
categories = ["development-tools", "config"]

[dependencies]
serde.workspace = true
toml.workspace = true
semver.workspace = true
thiserror.workspace = true
